; ModuleID = '/home/carl/AnghaBench/freebsd/sys/sparc64/sparc64/extr_machdep.c_utrap_hold.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/sparc64/sparc64/extr_machdep.c_utrap_hold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.md_utrap = type { i32 }

@mtxpool_sleep = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.md_utrap* @utrap_hold(%struct.md_utrap* %0) #0 {
  %2 = alloca %struct.md_utrap*, align 8
  %3 = alloca %struct.md_utrap*, align 8
  store %struct.md_utrap* %0, %struct.md_utrap** %3, align 8
  %4 = load %struct.md_utrap*, %struct.md_utrap** %3, align 8
  %5 = icmp eq %struct.md_utrap* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store %struct.md_utrap* null, %struct.md_utrap** %2, align 8
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* @mtxpool_sleep, align 4
  %9 = load %struct.md_utrap*, %struct.md_utrap** %3, align 8
  %10 = call i32 @mtx_pool_lock(i32 %8, %struct.md_utrap* %9)
  %11 = load %struct.md_utrap*, %struct.md_utrap** %3, align 8
  %12 = getelementptr inbounds %struct.md_utrap, %struct.md_utrap* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* @mtxpool_sleep, align 4
  %16 = load %struct.md_utrap*, %struct.md_utrap** %3, align 8
  %17 = call i32 @mtx_pool_unlock(i32 %15, %struct.md_utrap* %16)
  %18 = load %struct.md_utrap*, %struct.md_utrap** %3, align 8
  store %struct.md_utrap* %18, %struct.md_utrap** %2, align 8
  br label %19

19:                                               ; preds = %7, %6
  %20 = load %struct.md_utrap*, %struct.md_utrap** %2, align 8
  ret %struct.md_utrap* %20
}

declare dso_local i32 @mtx_pool_lock(i32, %struct.md_utrap*) #1

declare dso_local i32 @mtx_pool_unlock(i32, %struct.md_utrap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
